update help screen, fix answer chatClient, add flag for removing logs, finalise /clear command